--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,7 +29,7 @@
             android:padding="10dp">
 
             <EditText
-                android:id="@+id/edittext_search"
+                android:id="@+id/inputSearch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/button_search"
+            android:id="@+id/buttonSearch"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
