--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -9,54 +9,185 @@
     android:background="@android:color/transparent"
     tools:context=".Activities.Profile.ProfileFragment">
 
+    <!-- Profile Username, Follow and Message Buttons -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/profileUsername"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:layout_gravity="left"
+            android:textSize="20dp"
+            android:paddingTop="2dp"
+            android:paddingStart="10dp"
+            android:textStyle="bold"
+            android:textColor="#7209B7"
+            android:text="\@USERNAME">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:layout_weight="2">
+
+            <Button
+                android:id="@+id/followButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="FOLLOW"
+                android:textSize="7dp">
+            </Button>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:layout_weight="2">
+
+            <Button
+                android:id="@+id/messageButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="MESSAGE"
+                android:textSize="7dp">
+            </Button>
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Profile Information -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:backgroundTint="@color/colorBackgroundLight"
         android:orientation="horizontal">
 
+        <!-- Profile Picture and Edit -->
         <FrameLayout
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/profile_picture"
+                android:id="@+id/profilePicture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:src="@drawable/baseline_person_100"/>
+
         </FrameLayout>
 
+        <!-- Poster's Information -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="5dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/profileBio"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"
+                android:layout_height="50dp"
                 android:layout_gravity="left"
-                android:id="@+id/profile_bio"
                 android:textSize="12dp"
-                android:padding="15dp"
+                android:padding="5dp"
                 android:text="Hello! This is going to be the bio for the profile."
                 >
             </TextView>
 
-            <!-- TAGS CONTAINER INSIDE OF BIO -->
-            <HorizontalScrollView
+            <!-- Poster's Followers and Following Display -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:fillViewport="true">
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:paddingTop="5dp"
+                android:orientation="horizontal">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_tag"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            </HorizontalScrollView>
+                <!-- Poster's Followers Display -->
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/profileFollowersDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:text="\@FOLLOWERS">
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/profileFollowersText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="10dp"
+                        android:text="followers">
+                    </TextView>
+                </LinearLayout>
+
+                <!-- Poster's Followers Display -->
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/profileFollowingsDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:text="\@FOLLOWINGS">
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/profileFollowingsText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="10dp"
+                        android:text="followings">
+                    </TextView>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <!-- TAGS CONTAINER UNDERNEATH BIO -->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:layout_height="25dp"
+        android:fillViewport="true">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_tag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </HorizontalScrollView>
 
     <LinearLayout
         android:id="@+id/button_section"
@@ -85,18 +216,18 @@
                 android:src="@drawable/posts_profile" />
 
             <TextView
-                android:id="@+id/posts_text"
+                android:id="@+id/postsToggle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="POSTS"
                 android:textColor="@android:color/white"
+                android:text="POSTS"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </FrameLayout>
 
         <FrameLayout
-            android:id="@+id/frame_saved"
+            android:id="@+id/frame_tagged"
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_margin="8dp"
@@ -107,19 +238,19 @@
             android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
             <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/gif_saved"
+                android:id="@+id/gif_tagged"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/saved_profile" />
+                android:src="@drawable/tagged_profile" />
 
             <TextView
-                android:id="@+id/tags"
+                android:id="@+id/taggedToggle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="TAGS"
                 android:textColor="@android:color/white"
+                android:text="TAGGED"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </FrameLayout>
