--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -115,18 +115,17 @@
                 android:layout_gravity="center"
                 android:text="COMMENT"
                 android:textSize="20dp"/>
-
-            <ImageButton
+            <CheckBox
                 android:id="@+id/postSaveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="5dp"
                 android:paddingEnd="10dp"
-                android:src="@drawable/post_saved_empty_24" />
+                android:button="@drawable/save_button"/>
         </LinearLayout>
 
 </LinearLayout>
