--- a/app/src/main/res/layout/adapter_user_tags.xml
+++ b/app/src/main/res/layout/adapter_user_tags.xml
@@ -8,8 +8,13 @@
     <!-- tag description -->
     <TextView
         android:id="@+id/userTagName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/row_text"/>
+    <!--<TextView
+        android:id="@+id/userTagName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="@dimen/row_text"/>
+        android:textSize="@dimen/row_text"/>-->
 </LinearLayout>
