UI Changes:  - Rounded corner design  - Improved UI Elements  - Improved Edit Profile Page  - Improved Edit Tag Page

--- a/app/src/main/res/drawable/white_translucency_gradient.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient.xml
@@ -10,5 +10,8 @@
         android:startColor="#33FFFFFF"
         android:endColor="#E5FFFFFF"
         android:type="linear" />
+    <corners
+        android:topLeftRadius="16dp"
+      />
 
 </shape>
