--- a/app/src/main/res/drawable/white_translucency_gradient_login.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_login.xml
@@ -8,6 +8,6 @@
         android:type="linear" />
 
     <corners
-        android:topRightRadius="16dp"
+        android:radius="16dp"
         />
 </shape>
