--- a/app/src/main/res/drawable/white_translucency_gradient_vertical_post.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_vertical_post.xml
@@ -11,5 +11,6 @@
         android:centerY="50%"
         android:tileMode="clamp" />
 
-    <corners android:radius="16dp" />
+    <corners android:bottomRightRadius="16dp"
+     android:bottomLeftRadius="16dp" />
 </shape>
