--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
             android:paddingTop="2dp"
             android:paddingStart="10dp"
             android:textStyle="bold"
-            android:textColor="#7209B7"
+            android:textColor="#CF9F1A"
             android:text="\@USERNAME">
         </TextView>
 
@@ -57,8 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Edit Saved"
-                android:textSize="7dp">
-            </Button>
+                android:textSize="6dp"></Button>
         </LinearLayout>
     </LinearLayout>
 
