--- a/app/src/main/res/drawable/background5.xml
+++ b/app/src/main/res/drawable/background5.xml
@@ -1,33 +1,29 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- Gradient Background with Diagonal Effect -->
+    <!-- Background Blur Effect -->
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:startColor="#0C2C46"
-                android:endColor="#060D13"
-                android:angle="225">
-            </gradient>
+            <solid android:color="#2F7CB342" /> <!-- Light transparent white -->
         </shape>
     </item>
 
-    <!-- Border for Frosted Glass Effect -->
+    <!-- Border for Glass Effect -->
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="1.5dp"
-                android:color="#80FFFFFF" /> <!-- Semi-transparent white border -->
+                android:width="1dp"
+                android:color="#6D43A047" /> <!-- Semi-transparent white border -->
         </shape>
     </item>
 
-    <!-- Optional: Shadow for Depth -->
+    <!-- Shadow for Depth -->
     <item android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="#30FFFFFF" /> <!-- Soft shadow for extra depth -->
+                android:color="#20FFFFFF" />
         </shape>
     </item>
+
 </layer-list>
