--- a/app/src/main/res/layout/adapter_chatmsg_user.xml
+++ b/app/src/main/res/layout/adapter_chatmsg_user.xml
@@ -49,7 +49,7 @@
         android:id="@+id/senderProfile"
         android:layout_width="75dp"
         android:layout_height="match_parent"
-        android:background="@drawable/white_translucency_gradient"
+        android:background="@android:color/transparent"
         android:padding="15dp"
         android:scaleType="centerCrop"
         android:src="@drawable/navigation_profile_24"/>
