--- a/app/src/main/res/layout/adapter_chatroom.xml
+++ b/app/src/main/res/layout/adapter_chatroom.xml
@@ -30,5 +30,15 @@
             android:textSize="14sp"
             android:textColor="#3C3C3C"/>
 
+        <!-- Last Message Date -->
+        <TextView
+            android:id="@+id/lastMessageDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="01/01/2000"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:textColor="#0D232E"/>
+
     </LinearLayout>
 </LinearLayout>
