--- a/app/src/main/res/layout/adapter_comments.xml
+++ b/app/src/main/res/layout/adapter_comments.xml
@@ -3,29 +3,55 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="5dp"
+    android:layout_margin="8dp"
+    android:orientation="vertical">
 
-    <!-- Username -->
-    <TextView
-        android:id="@+id/adapter_comment_user"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:text="\@USERNAME"
-        android:textColor="#FF006E"/>
+        android:orientation="horizontal">
 
-    <!-- Comment Message -->
-    <TextView
-        android:id="@+id/adapter_comment_msg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="This is a comment"
-        android:paddingTop="5dp"
-        android:paddingBottom="10dp"
-        android:textColor="#0D0D0D"/>
+        <!-- Commenter's Profile -->
+        <ImageButton
+            android:id="@+id/commenterProfile"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:padding="5dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/navigation_profile_24"/>
+
+        <LinearLayout
+            android:layout_width="235dp"
+            android:layout_height="wrap_content"
+            android:maxWidth="225dp"
+            android:orientation="vertical"
+            android:padding="12dp">
+
+            <!-- Username -->
+            <TextView
+                android:id="@+id/adapter_comment_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:text="\@USERNAME"
+                android:textColor="#FF006E"/>
+
+            <!-- Comment Message -->
+            <TextView
+                android:id="@+id/adapter_comment_msg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="This is a comment"
+                android:paddingTop="5dp"
+                android:paddingBottom="10dp"
+                android:textColor="#0D0D0D"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
     <!-- Separator Line -->
     <View
