--- a/app/src/main/res/drawable/chatroom_background.xml
+++ b/app/src/main/res/drawable/chatroom_background.xml
@@ -1,11 +1,31 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Background Blur Effect -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#8003496B"/> <!-- Frosted glass effect -->
-            <corners android:radius="5dp"/>
+            <solid android:color="#2338A4B2" /> <!-- Light transparent white -->
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+
+    <!-- Border for Glass Effect -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="16dp" />
             <stroke
                 android:width="1dp"
-                android:color="#C6014B6F"/>
+                android:color="#4A5F949B" /> <!-- Semi-transparent white border -->
+        </shape>
+    </item>
+
+    <!-- Shadow for Depth -->
+    <item android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="16dp" />
+            <stroke
+                android:width="1dp"
+                android:color="#20FFFFFF" />
         </shape>
     </item>
 </layer-list>
