--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -45,9 +45,52 @@
             android:background="@android:color/transparent"
             android:padding="15dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/navigation_search_24"
+            android:src="@drawable/navigation_search_24"/>
+    </LinearLayout>
 
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="match_parent"/>
+
+        <CheckBox
+            android:id="@+id/searchUsersCheckbox"
+            android:layout_width="15dp"
+            android:layout_height="15dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Users"
+            android:textSize="5pt"
+            android:paddingLeft="5dp"
+            android:paddingRight="30dp"/>
+
+        <CheckBox
+            android:id="@+id/searchPostsCheckbox"
+            android:layout_width="15dp"
+            android:layout_height="15dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Posts"
+            android:textSize="5pt"
+            android:paddingLeft="5dp"
+            android:paddingRight="30dp"/>
+
+        <CheckBox
+            android:id="@+id/searchCationsCheckbox"
+            android:layout_width="15dp"
+            android:layout_height="15dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Captions"
+            android:textSize="5pt"
+            android:paddingLeft="5dp"/>
 
     </LinearLayout>
 
