Commit - Adds dark mode option

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -102,6 +102,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="left"
+                android:textColor="@color/white"
+                android:shadowColor="@color/black"
+                android:shadowDx="2"
+                android:shadowDy="1"
+                android:shadowRadius="1"
                 android:textSize="12dp"
                 android:padding="5dp"
                 android:text="Hello! This is going to be the bio for the profile."
@@ -131,6 +136,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:textColor="@color/white"
+                        android:shadowColor="@color/black"
+                        android:shadowDx="2"
+                        android:shadowDy="1"
+                        android:shadowRadius="1"
                         android:textSize="15dp"
                         android:textStyle="bold"
                         android:text="\@FOLLOWERS">
@@ -142,6 +152,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:textColor="@color/white"
+                        android:shadowColor="@color/black"
+                        android:shadowDx="2"
+                        android:shadowDy="1"
+                        android:shadowRadius="1"
                         android:textSize="10dp"
                         android:text="followers">
                     </TextView>
@@ -153,6 +168,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:layout_gravity="center"
+
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -162,6 +178,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:textColor="@color/white"
+                        android:shadowColor="@color/black"
+                        android:shadowDx="2"
+                        android:shadowDy="1"
+                        android:shadowRadius="1"
                         android:textSize="15dp"
                         android:textStyle="bold"
                         android:text="\@FOLLOWINGS">
@@ -172,6 +193,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textColor="@color/white"
+                        android:shadowColor="@color/black"
+                        android:shadowDx="2"
+                        android:shadowDy="1"
+                        android:shadowRadius="1"
                         android:gravity="center"
                         android:textSize="10dp"
                         android:text="followings">
@@ -191,12 +217,18 @@
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
             android:text="My Tags: "
             android:gravity="center"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_tag"
             android:layout_width="0dp"
             android:layout_height="35dp"
+
             android:layout_weight="3"
             android:orientation="horizontal"
             android:scrollbars="horizontal"
