--- a/app/src/main/res/layout/adapter_user_tags.xml
+++ b/app/src/main/res/layout/adapter_user_tags.xml
@@ -10,6 +10,11 @@
         android:id="@+id/userTagName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:shadowColor="@color/black"
+        android:shadowDx="2"
+        android:shadowDy="1"
+        android:shadowRadius="1"
         android:textSize="@dimen/row_text"/>
     <!--<TextView
         android:id="@+id/userTagName"
