--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,23 +60,41 @@
         <CheckBox
             android:id="@+id/searchUsersCheckbox"
             android:layout_width="15dp"
+            android:buttonTint="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowRadius="2"
             android:layout_height="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Users"
             android:textSize="5pt"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:textStyle="bold"
             android:paddingLeft="5dp"
             android:paddingRight="30dp"/>
 
         <CheckBox
             android:id="@+id/searchPostsCheckbox"
             android:layout_width="15dp"
+            android:buttonTint="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowRadius="2"
             android:layout_height="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Posts"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:textStyle="bold"
             android:textSize="5pt"
             android:paddingLeft="5dp"
             android:paddingRight="30dp"/>
@@ -84,12 +102,22 @@
         <CheckBox
             android:id="@+id/searchCationsCheckbox"
             android:layout_width="15dp"
+            android:buttonTint="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowRadius="2"
+
             android:layout_height="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Captions"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
             android:textSize="5pt"
+            android:textStyle="bold"
             android:paddingLeft="5dp"/>
 
     </LinearLayout>
