--- a/app/src/main/res/layout/adapter_search_result.xml
+++ b/app/src/main/res/layout/adapter_search_result.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
 
     <TextView
-        android:id="@+id/usernameText"
+        android:id="@+id/searchResultItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Username"
