--- a/app/src/main/res/layout/adapter_search_selected.xml
+++ b/app/src/main/res/layout/adapter_search_selected.xml
@@ -8,7 +8,7 @@
     android:gravity="center_vertical">
 
     <TextView
-        android:id="@+id/usernameText"
+        android:id="@+id/searchResultItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
