--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,8 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Edit Tags"
-                android:textSize="7dp">
-            </Button>
+                android:textSize="7dp"></Button>
         </LinearLayout>
 
         <LinearLayout
