--- a/app/src/main/res/layout/fragment_post_create_media.xml
+++ b/app/src/main/res/layout/fragment_post_create_media.xml
@@ -25,6 +25,7 @@
             android:paddingStart="10dp"
             android:textSize="10dp"
             android:hint="Select a file to upload..."
+            android:textColor="#BEC0BE"
             android:textColorHint="#BEC0BE"
             android:background="@drawable/background_transparent_rec3"/>
 
