--- a/app/src/main/res/layout/post_type_select_dialog.xml
+++ b/app/src/main/res/layout/post_type_select_dialog.xml
@@ -24,7 +24,6 @@
             android:text="TEXT"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
-
     </LinearLayout>
 
     <View
@@ -39,35 +38,13 @@
         android:gravity="center">
 
         <Button
-            android:id="@+id/create_image"
+            android:id="@+id/createMedia"
             android:layout_width="1000dp"
             android:layout_height="1000dp"
             android:layout_weight="1"
             android:background="@drawable/white_translucency_gradient"
             android:gravity="center"
-            android:text="IMAGE"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@color/colorBackground" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/create_sound"
-            android:layout_width="1000dp"
-            android:layout_height="1000dp"
-            android:layout_weight="1"
-            android:background="@drawable/white_translucency_gradient"
-            android:gravity="center"
-            android:text="SOUND"
+            android:text="IMAGE/SOUND"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
     </LinearLayout>
