--- a/app/src/main/res/layout/fragment_chatroom_setup.xml
+++ b/app/src/main/res/layout/fragment_chatroom_setup.xml
@@ -89,16 +89,34 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="60dp"/>
+                android:layout_height="60dp"
+                />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                >
+                <Button
+                    android:id="@+id/leaveChatroomButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="start"
+                    android:background="@drawable/frosted_glass_button"
+                    android:text="LEAVE"
+                    android:textColor="@android:color/white"
+                    android:visibility="gone"/>
+                <Button
+                    android:id="@+id/saveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/frosted_glass_button"
+                    android:text="SAVE"
+                    android:textColor="@android:color/white" />
 
-            <Button
-                android:id="@+id/saveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/frosted_glass_button"
-                android:text="SAVE"
-                android:textColor="@android:color/white" />
+            </FrameLayout>
+
 
             <View
                 android:layout_width="match_parent"
