--- a/app/src/main/res/layout/fragment_post_create_media.xml
+++ b/app/src/main/res/layout/fragment_post_create_media.xml
@@ -33,7 +33,7 @@
             android:id="@+id/mediaButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/baseline_attach_file_24"
+            android:src="@drawable/icon_upload"
             android:background="@drawable/background_transparent_rec3" />
 
     </LinearLayout>
